Added conection string to supabase

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "postgresql://postgres:asE4RDF0hG8zTNsb@db.faovmwzwrmqedyiisecx.supabase.co:5432/postgres"
+    "DefaultConnection": "postgresql://postgres:asE4RDF0hG8zTNsb@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
   },
 
   "EmailConfigurations": {
