--- a/CatalogWebApi.csproj
+++ b/CatalogWebApi.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="Azure.Communication.Email" Version="1.1.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.26.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="8.1.3" />
     <PackageReference Include="MailKit" Version="4.14.1" />
