--- a/.github/workflows/main_catalogwebapisissas.yml
+++ b/.github/workflows/main_catalogwebapisissas.yml
@@ -44,6 +44,17 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+
+      - name: Set App Settings in Azure
+        uses: azure/appservice-settngs@v1
+        with:
+          app-name: endowment-catalog-webapi
+          app-settings-json: |
+            {
+              "ConnectionStrings:DefaultConnection": "${{ secrets.DEFAULT_CONNECTION }}",
+              "ConnectionStrings:AzureBlobStorage": "${{ secrets.AZURE_BLOB_STORAGE }}",
+              "ConnectionStrings:AzureCommunication": "${{ secrets.AZURE_COMMUNICATION }}"
+            }
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
