--- a/.github/workflows/main_catalogwebapisissas.yml
+++ b/.github/workflows/main_catalogwebapisissas.yml
@@ -51,9 +51,9 @@ jobs:
           app-name: endowment-catalog-webapi
           app-settings-json: |
             {
-              "ConnectionStrings:DefaultConnection": "${{ secrets.DEFAULT_CONNECTION }}",
-              "ConnectionStrings:AzureBlobStorage": "${{ secrets.AZURE_BLOB_STORAGE }}",
-              "ConnectionStrings:AzureCommunication": "${{ secrets.AZURE_COMMUNICATION }}"
+              ConnectionStrings__DefaultConnection= "${{ secrets.DEFAULT_CONNECTION }}"\,
+              ConnectionStrings__AzureBlobStorage= "${{ secrets.AZURE_BLOB_STORAGE }}"\,
+              ConnectionStrings__AzureCommunication= "${{ secrets.AZURE_COMMUNICATION }}"
             }
       
       - name: Deploy to Azure Web App
