--- a/.github/workflows/main_catalogwebapisissas.yml
+++ b/.github/workflows/main_catalogwebapisissas.yml
@@ -46,9 +46,10 @@ jobs:
           name: .net-app
 
       - name: Set App Settings in Azure
-        uses: azure/appservice-settings@v1.0.0
+        uses: Azure/app-service-settings@v1
         with:
           app-name: CatalogWebApiSISSAS
+          slot-name: 'production'
           app-settings-json: |
              {
                "ConnectionStrings__DefaultConnection": ${{ secrets.DEFAULT_CONNECTION }},
