--- a/.github/workflows/main_catalogwebapisissas.yml
+++ b/.github/workflows/main_catalogwebapisissas.yml
@@ -44,17 +44,21 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-
-      - name: Set App Settings in Azure
-        uses: azure/appservice-settings@v1.0.0
+  
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          app-name: CatalogWebApiSISSAS
-          app-settings-json: |
-            {
-              "ConnectionStrings__DefaultConnection": "${{ secrets.DEFAULT_CONNECTION }}",
-              "ConnectionStrings__AzureBlobStorage": "${{ secrets.AZURE_BLOB_STORAGE }}",
-              "ConnectionStrings__AzureCommunication": "${{ secrets.AZURE_COMMUNICATION }}"
-            }
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1E76DEAFB0674254A0F11A632E8DBD91 }}
+
+      - name: Set App Settings in Azure via CLI
+        run: |
+          az webapp config appsettings set \
+            --name CatalogWebApiSISSAS \
+            --resource-group CatalogWebApi2 \
+            --settings ConnectionStrings__DefaultConnection="${{ secrets.DEFAULT_CONNECTION }}" \
+                       ConnectionStrings__AzureBlobStorage="${{ secrets.AZURE_BLOB_STORAGE }}" \
+                       ConnectionStrings__AzureCommunication="${{ secrets.AZURE_COMMUNICATION }}"
+      
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
