--- a/.github/workflows/main_catalogwebapisissas.yml
+++ b/.github/workflows/main_catalogwebapisissas.yml
@@ -12,61 +12,52 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
+      - name: Build
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Publish
+        run: dotnet publish -c Release -o "${{ env.DOTNET_ROOT }}/myapp"
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: app
+          path: ${{ env.DOTNET_ROOT }}/myapp
 
   deploy:
-    runs-on: windows-latest
     needs: build
-    
+    runs-on: windows-latest
+
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-  
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1E76DEAFB0674254A0F11A632E8DBD91 }}
+          name: app
 
       - name: Set App Settings
         uses: azure/appservice-settings@v1
         with:
-          app-name: CatalogWebApiSISSAS
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1E76DEAFB0674254A0F11A632E8DBD91 }}
+          app-name: "CatalogWebApiSISSAS"
           app-settings-json: |
-            [
-              { "name": "ConnectionStrings__DefaultConnection", "value": "${{ secrets.DEFAULT_CONNECTION }}" },
-              { "name": "ConnectionStrings__AzureBlobStorage", "value": "${{ secrets.AZURE_BLOB_STORAGE }}" },
-              { "name": "ConnectionStrings__AzureCommunication", "value": "${{ secrets.AZURE_COMMUNICATION }}" }
-            ]
-      
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
+            {
+              "ConnectionStrings__DefaultConnection": "${{ secrets.DEFAULT_CONNECTION }}",
+              "ConnectionStrings__AzureBlobStorage": "${{ secrets.AZURE_BLOB_STORAGE }}",
+              "ConnectionStrings__AzureCommunication": "${{ secrets.AZURE_COMMUNICATION }}"
+            }
+
+      - name: Deploy to Azure
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'CatalogWebApiSISSAS'
-          slot-name: 'Production'
-          package: .
+          app-name: "CatalogWebApiSISSAS"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1E76DEAFB0674254A0F11A632E8DBD91 }}
+          package: .
+
